# rtc

./: .gitignore  .gitmodules  .project  CMakeLists.txt  rtc.kdev4
.kdev4/: rtc.kdev4
assets/brs_xml/: bottles.xml  coffee_tables.xml  kitchen.xml  room.xml  sun_room.xml
core/: CMakeLists.txt  readme.txt
core/include/: bitmap.hpp  chrome_trace.hpp
core/source/: bitmap.cpp  chrome_trace.cpp
core/ut/: chrome_trace_ut.cpp
data_model/: CMakeLists.txt
data_model/include/: intersection.hpp  light.hpp
data_model/source/: intersection.cpp  optical_camera_plane.cpp
data_model/ut/: intersection_refraction_ut.cpp
examples/: api_design.cpp
gui_app/: CMakeLists.txt
gui_app/source/: geometry.hpp  image_conversion.cpp  image_conversion.hpp  main.cpp  main_window.cpp  main_window.hpp  scene_view.cpp  scene_view.hpp
input_model/: CMakeLists.txt
input_model/source/: brs.cpp
kd_tree/: CMakeLists.txt
kd_tree/benchmark/: kd_tree_benchmark.cpp
kd_tree/include/: bvh.hpp  bvh8.hpp  bvh8_iterator.hpp  bvh8_node.hpp  bvh8_rt.hpp  bvh_iterator.hpp  bvh_node.hpp  bvh_rt.hpp  kd_tree.hpp  kd_tree_iterator.hpp  kd_tree_node.hpp
kd_tree/source/: bvh.cpp  bvh8.cpp  bvh8_iterator.cpp  bvh_iterator.cpp  kd_tree.cpp  kd_tree_iterator.cpp
kd_tree/ut/: kd_tree_ut.cpp
math/: CMakeLists.txt
math/benchmark/: bounding_box_benchmark.cpp  math_vector_benchmark.cpp  point_in_triangle_benchmark.cpp
math/include/: bounding_box.hpp  math_point.hpp  math_ray.hpp  math_vector.hpp  point_in_triangle_test.hpp
math/source/: bounding_box.cpp  point_in_triangle_test.cpp
math/ut/: bounding_box_ut.cpp
ray_tracer/include/: begin_end_concept.hpp  ray_tracer.hpp
render_engine/: CMakeLists.txt
render_engine/include/: render_engine.hpp
rt_algorithms/: CMakeLists.txt
rt_algorithms/benchmark/: distributed_ray_tracing_benchmark.cpp
rt_algorithms/include/: backward_al.hpp  distributed_ray_tracing.hpp  material_light_color.hpp  shadow_ray.hpp
rt_algorithms/source/: material_light_color.cpp
rt_algorithms/ut/: distributed_ray_tracing_shadow_ut.cpp
rt_service/: CMakeLists.txt
rt_service/include/: rt_service.hpp
rt_service/ut/: rt_service_ut.cpp
